...
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />


        <Button
            android:id="@+id/btnNext"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="10dp"
...
